# BME280_Sensor_Lib_and_PC_App

./: LICENSE  README.md
BME280/: .gitignore  CMakeLists.txt  main.cpp
BME280/.devcontainer/: Dockerfile  devcontainer.json
BME280/bme280/: CMakeLists.txt
BME280/bme280/include/: bme280.hpp
BME280/bme280/src/: bme280.cpp
BME280/bsp/bsp_interface/include/: bsp.hpp  bsp_clock.hpp
BME280/bsp/stm32l432kc/: CMakeLists.txt  toolchain.cmake
BME280/bsp/stm32l432kc/cubeMX/: .mxproject  CMakeLists.txt  HDC2080_driver.ioc  Makefile  bme280_stm32l423kc.ioc
BME280/bsp/stm32l432kc/cubeMX/Core/Inc/: main.h
BME280/bsp/stm32l432kc/cubeMX/Core/Src/: gpio.c  i2c.c  main.c  spi.c  stm32l4xx_it.c
BME280/bsp/stm32l432kc/src/: bsp.cpp  bsp_clock.cpp
BME280/cli/: CMakeLists.txt
BME280/cli/include/: cli.hpp
BME280/cli/src/: cli.cpp
BME280/libraries/bme280/: CMakeLists.txt
BME280/libraries/bme280/include/: bme280.hpp
BME280/libraries/bme280/src/: bme280.cpp
BME280/libraries/bme280_cli/: CMakeLists.txt
BME280/libraries/bme280_cli/include/: bme280_cli.hpp
BME280/libraries/bme280_cli/src/: bme280_cli.cpp
BME280/libraries/cli/include/: cli.hpp
BME280/libraries/cli/src/: cli.cpp
BME280/tests/: BME280_Tests.cpp  CMakeLists.txt  Tests.cpp
PC_App/: .gitignore  BME_Commands.py  GUI.py  Main.py  UartThread.py  mainWindow.ui
